代码优化：学生映射类的参数修复         删除学生信息页面正则表达式约束         把学生实体类的studyid更改为String类型         闭合input标签

--- a/src/main/resources/templates/student/stulist.html
+++ b/src/main/resources/templates/student/stulist.html
@@ -86,11 +86,11 @@
             <div class="modal-body">
                 <div class="form-group">
                     <label th:class="control-label">学号</label>
-                    <input type="text" name="studyid" th:class="form-control" placeholder="学号" class="form-control">
+                    <input type="text" name="studyid" th:class="form-control" placeholder="学号" class="form-control"/>
                 </div>
                 <div class="form-group">
                     <label th:class="control-label">姓名</label>
-                    <input type="text" name="name" th:class="form-control" placeholder="姓名" class="form-control">
+                    <input type="text" name="name" th:class="form-control" placeholder="姓名" class="form-control"/>
                 </div>
                 <div class="form-group">
                     <label th:class="control-label">性别</label>
@@ -108,20 +108,21 @@
                 <div class="form-group">
                     <label th:class="control-label">年龄</label>
                     <input type="int" name="age" th:class="form-control" placeholder="年龄（1-120的整数）"
-                           class="form-control">
+                           class="form-control"/>
                 </div>
                 <div class="form-group">
                     <label th:class="control-label">出生日期</label>
-                    <input type="date" name="birth" th:class="form-control"  class="form-control">
+                    <input type="date" name="birth" th:class="form-control" class="form-control"/>
                 </div>
                 <div class="form-group">
                     <label th:class="control-label">联系电话</label>
-                    <input type="tel" name="phone" th:class="form-control" placeholder="联系电话" class="form-control">
+                    <input type="tel" name="phone" th:class="form-control" placeholder="联系电话" class="form-control"/>
                 </div>
 
                 <div class="form-group">
                     <label th:class="control-label">家庭地址</label>
-                    <input type="text" name="address" th:class="form-control" placeholder="详细地址" class="form-control" required>
+                    <input type="text" name="address" th:class="form-control" placeholder="详细地址" class="form-control"
+                           required/>
                 </div>
 <!--                <div class="form-group">-->
 <!--                    <label th:class="control-label">专业</label>-->
