代码优化：学生映射类的参数修复         删除学生信息页面正则表达式约束         把学生实体类的studyid更改为String类型         闭合input标签         增加了家庭地址显示栏

--- a/src/main/resources/templates/student/stulist.html
+++ b/src/main/resources/templates/student/stulist.html
@@ -37,6 +37,7 @@
                                     <th>年龄</th>
                                     <th>生日</th>
                                     <th>联系电话</th>
+                                    <th>家庭地址</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
@@ -48,6 +49,7 @@
                                     <td th:text="${stu.getAge()}"></td>
                                     <td th:text="${stu.getBirth()}"></td>
                                     <td th:text="${stu.getPhone()}"></td>
+                                    <td th:text="${stu.getAddress()}"></td>
                                     <td>
                                         <div class="btn-group">
                                             <button class="btn btn-group-sm btn-primary" data-toggle="modal" data-target="#myModal">编辑</button>
