--- a/src/main/resources/templates/student/students_list.html
+++ b/src/main/resources/templates/student/students_list.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <title>首页 - 光年(Light Year Admin)后台管理系统模板</title>
-    <link rel="icon" href="favicon.ico" type="image/ico">
-    <meta name="keywords" content="LightYear,光年,后台模板,后台管理系统,光年HTML模板">
-    <meta name="description" content="LightYear是一个基于Bootstrap v3.3.7的后台管理系统的HTML模板。">
-    <meta name="author" content="yinqi">
+    <title>学生信息管理</title>
+    <!--    <link rel="icon" href="favicon.ico" type="image/ico">-->
+    <meta name="description" content="一个基于Spring Boot的简单学生信息管理系统">
+    <meta name="author" content="tujiao">
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/materialdesignicons.min.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
