--- a/src/main/resources/templates/commons/commons.html
+++ b/src/main/resources/templates/commons/commons.html
@@ -6,7 +6,7 @@
 
     <!-- logo -->
     <div id="logo" class="sidebar-header">
-        <a href="index.html"><img src="images/logo-sidebar.png" title="LightYear" alt="LightYear" /></a>
+        <a href="index.html"><img src="/images/logo-sidebar.png" title="LightYear" alt="LightYear"/></a>
     </div>
     <div class="lyear-layout-sidebar-scroll">
         <nav class="sidebar-main">
@@ -51,7 +51,7 @@
                 <li class="dropdown dropdown-profile">
                     <a href="javascript:void(0)" data-toggle="dropdown">
                         <span th:text="${session.loginUser}"><span class="caret"></span></span>
-                        <img class="img-avatar img-avatar-48 m-r-10" src="images/users/avatar.jpg" alt="笔下光年" />
+                        <img class="img-avatar img-avatar-48 m-r-10" src="/images/users/avatar.jpg" alt="笔下光年"/>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right">
                         <li> <a href="#"><i class="mdi mdi-account"></i> 个人信息</a> </li>
