--- a/src/main/resources/templates/student/students_list.html
+++ b/src/main/resources/templates/student/students_list.html
@@ -12,6 +12,7 @@
     <link href="css/materialdesignicons.min.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
 </head>
+
 <body>
 <div th:insert="~{commons/commons::sidebar(active='stulist.html')}"/>
 <div th:insert="~{commons/commons::header}"/>
@@ -64,6 +65,25 @@
                                 </tbody>
                             </table>
                         </div>
+                        <nav class="text-right">
+                            <ul class="pagination no-border">
+                                <li class="disabled">
+                                    <a href="#!">
+                                        <span><i class="mdi mdi-chevron-left"></i></span>
+                                    </a>
+                                </li>
+                                <li class="active"><a href="#">1</a></li>
+                                <li><a href="#!">2</a></li>
+                                <li><a href="#!">3</a></li>
+                                <li><a href="#!">4</a></li>
+                                <li><a href="#!">5</a></li>
+                                <li>
+                                    <a href="#!">
+                                        <span><i class="mdi mdi-chevron-right"></i></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
