--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,7 +66,7 @@
           <input type="password" placeholder="请输入密码" class="form-control" id="password" name="password" required data-placement="right" data-toggle="popover"/>
           <span class="mdi mdi-lock form-control-feedback" aria-hidden="true"></span>
         </div>
-        <p class="alert alert-danger" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
+        <p class="alert alert-danger text-center" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
         <div class="form-group">
           <button class="btn btn-block btn-primary" type="submit">立即登录</button>
         </div>
