* 增加了查询学生总个数的方法

--- a/src/main/resources/templates/student/students_list.html
+++ b/src/main/resources/templates/student/students_list.html
@@ -131,11 +131,11 @@
                         </label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label th:class="control-label">年龄</label>
-                    <input type="int" name="age" th:class="form-control" placeholder="年龄（1-120的整数）"
-                           class="form-control"/>
-                </div>
+                <!--                <div class="form-group">-->
+                <!--                    <label th:class="control-label">年龄</label>-->
+                <!--                    <input type="int" name="age" th:class="form-control" placeholder="年龄（1-120的整数）"-->
+                <!--                           class="form-control"/>-->
+                <!--                </div>-->
                 <div class="form-group">
                     <label th:class="control-label">出生日期</label>
                     <input type="date" name="birth" th:class="form-control" class="form-control"/>
