--- a/src/main/resources/templates/student/student_update.html
+++ b/src/main/resources/templates/student/student_update.html
@@ -56,12 +56,12 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label th:class="control-label">年龄</label>
-                                    <input th:value="${stu.age}" type="int" name="age" th:class="form-control"
-                                           placeholder="年龄（1-120的整数）"
-                                           class="form-control"/>
-                                </div>
+                                <!--                                <div class="form-group">-->
+                                <!--                                    <label th:class="control-label">年龄</label>-->
+                                <!--                                    <input th:value="${stu.age}" type="int" name="age" th:class="form-control"-->
+                                <!--                                           placeholder="年龄（1-120的整数）"-->
+                                <!--                                           class="form-control"/>-->
+                                <!--                                </div>-->
                                 <div class="form-group">
                                     <label th:class="control-label">出生日期</label>
                                     <input th:value="${stu.birth}" type="date" name="birth" th:class="form-control"
